--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": ".NET Development Environment",
-  "image": "[mcr.microsoft.com/devcontainers/dotnet:9.0](https://mcr.microsoft.com/devcontainers/dotnet:9.0)",
+  "image": "https://mcr.microsoft.com/devcontainers/dotnet:9.0",
   "features": {
     "ghcr.io/devcontainers/features/git:1": {}
   },
